--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,13 @@ body {
   padding: 0;
   background-color: #74BEE7;
 }
+
+.smallLogo {
+  padding: 15px 0 0 0;
+}
+
+.smallNav {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+}
