--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   padding: 0;
   background-color: #74BEE7;
+
 }
 
 .smallLogo {
@@ -11,5 +12,5 @@ body {
 .smallNav {
   display: flex;
   justify-content: space-between;
-  padding: 10px;
+  padding:  10px 20px 10px 20px;
 }
